# dumbjson

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets_TOO_NEW.json  LICENSE  README.md
code/: CMakeLists.txt  global.cpp  global.h  main.cpp  path.json
code/tools/: BS_archive.h  BS_binary.h  BS_json.cpp  BS_json.h  BS_stream.cpp  BS_stream.h  RWops.cpp  RWops.h  dumb_doc_json.cpp  dumb_doc_json.h  dumb_json.cpp  dumb_json.h  dumb_stream_json.h  dumbjson.cpp  dumbjson.h  kson_serializer.h
userpresets/: CMakeUserPresets-linux.json  CMakeUserPresets-msvc.json
